--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "link": "^1.5.1",
     "react": "18.2.0",
     "react-native": "0.71.3",
+    "react-native-contacts": "^7.0.5",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-image-picker": "^5.1.0",
+    "react-native-permissions": "^3.7.3",
     "react-native-reanimated": "^3.0.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0"
